# runtime

./: LICENSE  README copy.md  README.md  SKILLS.md  bar.html  eslint.config.js  package-lock.json  package.json  scripts.mjs  vite.config.js
scripts/: make-latest-json.mjs
src/: App.css  App.jsx  bar.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: setup_ollama.sh
src-tauri/src/: app_note.rs  apps.rs  browser_manager.rs  commands.rs  config.rs  lib.rs  main.rs  network.rs  platform.rs  sketchs.rs  sketchs_browser.rs  skills.rs  tray.rs  utils.rs
src-tauri/src/scripts/: append_note.scpt  create_note.scpt
src-tauri/src/test/: pdf.rs  readme.md
src/bar/: CommandBar.jsx
src/components/layout/: Frame.jsx  HeaderBar.jsx
src/components/pages/: HistoryView.jsx  HomeView.jsx  LegacySessionView.jsx  SessionView.jsx  SettingView.jsx
src/components/ui/: ActionBar.jsx  ActionIcons.jsx  (+20 more)
src/hooks/: useAppState.js
src/lib/: dom.js  dom.ts  dom.utils.ts  emitters.js  key_handle.js  llm.engine.helper.ts  llm.engine.js  llm.engine.schemas.ts  llm.engine.ts  page.manager.js  plan.fewshot.js  plan.fewshot.ts  plan.orchestrator.schemas.ts  plan.orchestrator.ts  plan.tools.ts  posthogSetup.js  pptr.js  prompt.helpers.ts  prompt.schema.ts  prompt.ts  query.fewshot.js  query.fewshot.ts  query.helpers.ts  query.llm.ts  query.schemas.ts  query.splitter.js  query.tools.ts  querySplitter.js  skills-backup.json  skills.json  tab.registry.ts  task.browser.executor.ts  task.browser.helpers.ts  task.browser.runner.atomic.ts  task.browser.runner.ts  task.browser.schemas.ts  task.browser.skill.registry.ts  task.browser.skill.resolver.ts  task.browser.tools.builder.ts  task.browser.tools.ts  (+15 more)
test/: sample.xml
(+4 files in other folders)
