[package]
name = "runtime"
version = "0.1.0"
description = "Everything at runtime"
authors = ["bayangp0@gmail.com"]
edition = "2021"

[lib]
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
